# libhelfem

./: CMakeLists.txt  Doxyfile  README.md  meson.build
include/: helfem  helfem.source.hh  helfem_utils
src/: helfem.cc  utils.cc
test/: armadillo.cc  runtests.cc
